--- a/ai-faculty-overview-revised.html
+++ b/ai-faculty-overview-revised.html
@@ -6,12 +6,12 @@
 
 		<title>AI: what it is and how to use it!</title>
 
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="reveal.css">
-		<link rel="stylesheet" href="night.css">
+		<link rel="stylesheet" href="dist/reset.css">
+		<link rel="stylesheet" href="dist/reveal.css">
+		<link rel="stylesheet" href="dist/night.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="monokai.css">
+		<link rel="stylesheet" href="plugin/highlight/monokai.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -620,10 +620,10 @@
 				</section>
 			</div>
 		</div>
-		<script src="reveal.js"></script>
-		<script src="notes.js"></script>
-		<script src="markdown.js"></script>
-		<script src="highlight.js"></script>
+		<script src="dist/reveal.js"></script>
+		<script src="plugin/notes/notes.js"></script>
+		<script src="plugin/markdown/markdown.js"></script>
+		<script src="plugin/highlight/highlight.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
