--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 									<td>Doomsday</td>
 								</tr>
 								<tr class="fragment fade-in">
-									<td><img src="AI-Rapture.png"></td>
-									<td><img src ="AI-apocalypse.png"></td>
+									<td><img src="Images/AI-Rapture.png"></td>
+									<td><img src ="Images/AI-apocalypse.png"></td>
 								</tr>
 							</table>
 					</section>
