--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 									<td>Doomsday</td>
 								</tr>
 								<tr class="fragment fade-in">
-									<td><img src="Images/AI-Rapture.png"></td>
-									<td><img src ="Images/AI-apocalypse.png"></td>
+									<td><img src="images/AI-Rapture.png"></td>
+									<td><img src ="images/AI-apocalypse.png"></td>
 								</tr>
 							</table>
 					</section>
@@ -157,8 +157,8 @@
 									<td>Doomsday</td>
 								</tr>
 								<tr class="fragment fade-in">
-									<td><img src="Images/AI_utopia_screenshot.png"></td>
-									<td><img src ="Images/AI_dystopia_screenshot.png"></td>
+									<td><img src="images/AI_utopia_screenshot.png"></td>
+									<td><img src ="images/AI_dystopia_screenshot.png"></td>
 								</tr>
 							</table>
 					</section>
@@ -229,7 +229,7 @@
 						<div style='position: relative; padding-bottom: 56.25%; padding-top: 35px; height: 0; overflow: hidden;'><iframe sandbox='allow-scripts allow-same-origin allow-presentation' allowfullscreen='true' allowtransparency='true' frameborder='0' height='315' src='https://www.mentimeter.com/app/presentation/alngf3kr2ysrqp64ez5csqtcm77h5yi2/embed' style='position: absolute; top: 0; left: 0; width: 100%; height: 100%;' width='420'></iframe></div>
 					</section>
 					<section>
-						<img src="Images/neural_network_image.png" alt="LLM predicting words in English">
+						<img src="images/neural_network_image.png" alt="LLM predicting words in English">
 						<p>A: How a LLM can create a meaningful sentence in English.</p>
 					</section>
 				</section>
@@ -251,7 +251,7 @@
 						<p>Input: What caused the fall of the Roman Empire?</p>
 							<div class="r-stack">
 								<img class="fragment fade-out" alt="LLM map of concepts related to the Roman Empire">
-								<img src="Images/LLM_Response_Roman_Empire_Fall.png" class="fragment current-visible" alt="Boodle Box screenshot of answer to the question 'What caused the fall of the Roman Empire?'">
+								<img src="images/LLM_Response_Roman_Empire_Fall.png" class="fragment current-visible" alt="Boodle Box screenshot of answer to the question 'What caused the fall of the Roman Empire?'">
 							</div>
 					</section>
 					<section>
@@ -270,7 +270,7 @@
 					</section>
 					<section>
 						<p>This is true even when you're dealing with personal content, aka "Retreval-augmented generation" (RAG)</p>
-						<img src="Images/MS_Copilot_Data_Cleaning.png" alt="Picture of BMC doc being submitted to MS Copilot">
+						<img src="images/MS_Copilot_Data_Cleaning.png" alt="Picture of BMC doc being submitted to MS Copilot">
 						<p>RAG's just take your submitted documents and layer them on top of the answer the LLM otherwise would produce.</p>
 					</section>
 				</section>
@@ -322,7 +322,7 @@
 									<li class="fragment">Zoom has an AI features companion that can answer questions in the chat, generate meeting summaries, and produce meeting insights.</li>
 									<li class="fragment">Look at <a href="https://askathena.brynmawr.edu/help/zoom-ai-companion">Zoom AI Companion</a> on Ask Athena for more info on this feature.</li>
 								</ul>
-							<img src="Images/Zoom_AI_Screenshot.png" alt="screenshot of Zoom AI" class="r-stretch">
+							<img src="images/Zoom_AI_Screenshot.png" alt="screenshot of Zoom AI" class="r-stretch">
 					</section>
 					<section>
 							<h3>2. Adobe Firefly</h3>
@@ -330,7 +330,7 @@
 									<li class="fragment">Firefly is Adobe's service for generating images, video, and audio content.</li>
 									<li class="fragment">As BMC members, you can submit up to 1,000 prompts a month.Look at <a href="https://askathena.brynmawr.edu/help/adobe-firefly">Adobe Firefly</a> on Ask Athena for more info on this feature.</li>
 								</ul>
-							<img class="r-stretch" src="Images/Adobe_Firefly_Screenshot.png" alt="screenshot of Adobe Firefly">
+							<img class="r-stretch" src="images/Adobe_Firefly_Screenshot.png" alt="screenshot of Adobe Firefly">
 					</section>
 					<section>
 							<h3>Microsoft Copilot</h3>
@@ -338,7 +338,7 @@
 										<li class="fragment">Copilot is Microsoft's generative AI system. It can be used both to generate new content ("Write an essay on...") or to modify existing content (e.g., "Remove entries from older than 2015").</li>
 										<li class="fragment">Go to <a href="https://askathena.brynmawr.edu/help/microsoft-copilot">Microsoft Copilot</a> on Ask Athena for access info.</li>
 									</ul>
-							<img src="Images/MS_Copilot_Screenshot.png" class="r-stretch" alt="screenshot of Copilot chatbox">
+							<img src="images/MS_Copilot_Screenshot.png" class="r-stretch" alt="screenshot of Copilot chatbox">
 					</section>
 				</section>
 				<section>
@@ -390,7 +390,7 @@
 						<h3>3. Environmental Issues</h3>
 						<div class="r-stack">
 							<p class="fragment fade-in-then-out">AI systems rely on large data centes that use huge amounts of power. This is already having an impact on local power grids</p>
-							<img src="Images/Data_Center_Energy_Use.png" class="fragment fade-in-then-out" alt="screenshot on energy prices">
+							<img src="images/Data_Center_Energy_Use.png" class="fragment fade-in-then-out" alt="screenshot on energy prices">
 							<p class="fragment fade-in-then-out">While individal AI prompts are not energy intensive, large ammounts of prompts are.</p>	
 							<p class="fragment fade-in-then-out">Energy companies aren't always responding to these demand surges with renewable energy, which you may want to consider when using them.</p>
 						</div>
@@ -449,13 +449,13 @@
 						<p>Two professors, Prof Rick Dakan (Ringling College of Art and Design) and Prof Joseph Feller (University College Cork), developed <a href="https://aifluencyframework.org/">The AI Fluency Framework</a>.</p>
 					</section>
 					<section>
-						<img src="Images/AI_4D_Framework.png" alt="Picture of the 4D's framework for using AI in teaching">
+						<img src="images/AI_4D_Framework.png" alt="Picture of the 4D's framework for using AI in teaching">
 						<p>This a framework I'd recommend you keep in mind when using AI</p>
 					</section>
 					<section>
 						<h4>One warning though: </h4>
 						<hr>
-						<img class="r-stretch" src="Images/Teacher_AI_Use_Headline.png" alt="Headline about student who was upset about proffessor AI use">
+						<img class="r-stretch" src="images/Teacher_AI_Use_Headline.png" alt="Headline about student who was upset about proffessor AI use">
 					</section>
 					<section>
 					    <h4>However you use AI, be prepared to:</h4>
@@ -470,12 +470,12 @@
 				<section>
 					<section>
 						<h3>There are a lot of alarmist headlines about AI use among students</h3>
-						<img src="Images/NYMag_headline_AI_Cheating.jpeg" class="r-stretch" alt="Screenshot of headline from NY Mag article about college students cheating with AI">
+						<img src="images/NYMag_headline_AI_Cheating.jpeg" class="r-stretch" alt="Screenshot of headline from NY Mag article about college students cheating with AI">
 					</section>
 					<section>
 						<h3>Data presents a more complicated picture</h3>
 						<hr>
-						<img src="Images/AV_Student_AI_Use.png" class="r-stretch" alt="Graph from Annette Vee's presentation on student AI use">
+						<img src="images/AV_Student_AI_Use.png" class="r-stretch" alt="Graph from Annette Vee's presentation on student AI use">
 					</section>
 					<section>
 				    	<p><strong>Contra to our worst fears, a lot of students actually care about their education and don't want a computer to just do the work for them.</strong></p>
@@ -483,7 +483,7 @@
 					<section>
 						<h3>However, there are situations where student make use of AI</h3>
 						<hr>
-						<img src="Images/AV_When_Students_Use_AI.png" class="r-stretch" alt="Graph from Annette Vee's presentation on student AI use">
+						<img src="images/AV_When_Students_Use_AI.png" class="r-stretch" alt="Graph from Annette Vee's presentation on student AI use">
 					</section>
 					<section>
 						<div style='position: relative; padding-bottom: 56.25%; padding-top: 35px; height: 0; overflow: hidden;'><iframe sandbox='allow-scripts allow-same-origin allow-presentation' allowfullscreen='true' allowtransparency='true' frameborder='0' height='315' src='https://www.mentimeter.com/app/presentation/alngf3kr2ysrqp64ez5csqtcm77h5yi2/embed' style='position: absolute; top: 0; left: 0; width: 100%; height: 100%;' width='420'></iframe></div>
@@ -496,7 +496,7 @@
 					<section>
 					    <h4>Some Recommendations from Annette Vee</h4>
 					    <hr>
-					    <img src="Images/AV_AI_Recommendations.png" class="r-stretch" alt="Annette Vee summary of how to deal with AI as teachers">
+					    <img src="images/AV_AI_Recommendations.png" class="r-stretch" alt="Annette Vee summary of how to deal with AI as teachers">
 					</section>
 				</section>
 				<section>
@@ -521,7 +521,7 @@
 								<li>Does require students to download the SEB software to their computer</li>
 								<li>Is one of the more complex features in Moodle</li>
 						    </ul>
-						 <img src="Images/SafeExamBrowser.jpg" class="r-stretch" alt="Moodle Safe Exam Browser logo">
+						 <img src="images/SafeExamBrowser.jpg" class="r-stretch" alt="Moodle Safe Exam Browser logo">
 					</section>
 					<section>
 						<ul>	
