--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 					</section>
 					<section>
 						<p>This is true even when you're dealing with personal content, aka "Retreval-augmented generation" (RAG)</p>
-						<img src="images/MS_Copilot_Data_Cleaning.png" alt="Picture of BMC doc being submitted to MS Copilot">
+						<img class="r-stretch" src="images/MS_Copilot_Data_Cleaning.png" alt="Picture of BMC doc being submitted to MS Copilot">
 						<p>RAG's just take your submitted documents and layer them on top of the answer the LLM otherwise would produce.</p>
 					</section>
 				</section>
@@ -322,7 +322,7 @@
 									<li class="fragment">Zoom has an AI features companion that can answer questions in the chat, generate meeting summaries, and produce meeting insights.</li>
 									<li class="fragment">Look at <a href="https://askathena.brynmawr.edu/help/zoom-ai-companion">Zoom AI Companion</a> on Ask Athena for more info on this feature.</li>
 								</ul>
-							<img src="images/Zoom_AI_Screenshot.png" alt="screenshot of Zoom AI" class="r-stretch">
+							<img src="images/Zoom_AI_Screenshot.png" class="r-strech" alt="screenshot of Zoom AI" class="r-stretch">
 					</section>
 					<section>
 							<h3>2. Adobe Firefly</h3>
