--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
 				</section>
 				<section>
 					<section>
-						<h4>For simple mathermatical equations like the ones above, a small number of CPUs (1-2) can handle it</h4>
+						<h4>For simple mathermatical equations like the ones above, a simple computer can handle it incredibley quickly.</h4>
 						<img src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Neural_network.svg" style="background-color: white" alt="picture of a simple neural net">
 					</section>
 					<section>
-						<h4>For more complex situationas, more CPUs operating sequentially or in a sample neural net can work</h4>
+						<h4>For more complex tasks, more advanced computers or several of them linked into a neural network are needed</h4>
 						<img class="r-stretch" src="https://upload.wikimedia.org/wikipedia/commons/5/54/Feed_forward_neural_net.gif" alt="picture of a more complex neural net">
 					</section>
 					<section>
