--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					</section>
 					<section>
 						<h4>The neurons in your brain fire in certain patterns to build associations between physical sensations ("wall of hot orange gas") and mental concepts ("fire"). Neural nets mimic that process, both for simple processes:</h4>
-						<img alt="picture of 1+1=2">
+						<img src="images/Addition_graphic.svg" alt="picture of 1+1=2">
 					</section>
 					<section>
 						<h4>And more complex ones:</h4>
